--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Playwrite+HU&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Playwrite+HU&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
-
-@import "https://www.nerdfonts.com/assets/css/webfont.css";
 
 @layer colors {
   :root {
@@ -41,20 +39,20 @@
 }
 
 @layer scrollbar {
-::-webkit-scrollbar {
-  width: 10px;
-}
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
 
-::-webkit-scrollbar-track {
-  background: var(--base);
-}
+  ::-webkit-scrollbar-track {
+    background: var(--base);
+  }
 
-::-webkit-scrollbar-thumb {
-  background: var(--primary);
-  border-radius: 50px;
-}
+  ::-webkit-scrollbar-thumb {
+    background: var(--primary);
+    border-radius: 50px;
+  }
 
-::-webkit-scrollbar-thumb:hover {
+  ::-webkit-scrollbar-thumb:hover {
     brightness: 0.5;
-}
+  }
 }
